   or OCI_ATTR_RESERVED_15/16 so cannot build (Martin J. Evans)

 - skip 24implicit_utf8.t if chr set is not UTF-8 (Martin J. Evans)

 - Fixed RT76268 - ora_taf_sleep was documented as taf_sleep by
   accident. There was no way to stop the TAF reconnect attempts.
   If you want to try another connect attempt in your taf handler you
   now need to return OCI_FO_RETRY from it. (Martin J. Evans)

 [MISCELLANEOUS]

 - minor change to confusing debug output for input parameters
   (Martin J. Evans)

1.44      2012-04-23
 - promote 1.43_00 to official release

1.43_00   2012-03-30

 [BUG FIXES]
 - Applied patch from Rafael Kitover (Caelum) to column_info to handle
   DEFAULT columns greater in length than the DBI default of 80. The
   DEFAULT column is a long and it is a PITA to have to set
   LongReadLen which you can only do on a connection handle in
   DBD::Oracle. The default maximum size is now 1Mb; above that you
   will still have to set LongReadLen (Martin J. Evans)

 - Fixed 70meta and rt74753-utf8-encoded to not die if you cannot
   connect to Oracle or you cannot install from CPAN if you have not
   set up a valid Oracle connection.

 - Fixed 75163. Bfile lobs were not being opened before fetching if
   ora_auto_lobs was disabled (Martin J. Evans).

   Note: this has a minor impact on non bfile lobs when ora_auto_lobs
   is not in force as an additional call to OCILobFileIsOpen will be
   made.

 - Removed all DBIS usage fixing and speeding up threaded
   Perls (Martin J. Evans).

 - Minor fix to avoid use of uninitialised variable in 31lob.t (Martin J. Evans)

 [DOCUMENTATION]
 - clarification of when StrictlyTyped/DiscardString can be used and
   LongReadLen (Martin J. Evans)

 - Documented the 3rd type of placeholder and rewrote the existing
   pod for placeholders (Martin J. Evans).

1.42      2012-03-13
 - skip rt74753-utf8-encoded.t if db is not unicode

1.40      2012-03-08
 - promote 1.39_00 to official release

1.39_00   2012-02-24

 [BUG FIXES]